[gd_scene load_steps=11 format=3 uid="uid://bcch4toabsmlt"]

[ext_resource type="Script" uid="uid://runps8svwhp0" path="res://Scenes/worm.gd" id="1_l5dqu"]
[ext_resource type="Texture2D" uid="uid://b1f3y6wxdyttv" path="res://graphics/Enemies/worm/0.png" id="1_skiwb"]
[ext_resource type="Shader" uid="uid://oiau6rls5ref" path="res://Scenes/flicker.gdshader" id="2_n80vc"]
[ext_resource type="Texture2D" uid="uid://bsrseajvxfnw4" path="res://graphics/Enemies/worm/1.png" id="3_n80vc"]
[ext_resource type="AudioStream" uid="uid://cjqwem0e0t1bb" path="res://audio/shot_01.ogg" id="5_b7lw1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1856"]
shader = ExtResource("2_n80vc")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_x1856"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_skiwb")
}, {
"duration": 1.0,
"texture": ExtResource("3_n80vc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5dqu"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n80vc"]
size = Vector2(14, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1856"]
size = Vector2(4, 4)

[node name="worm" type="Area2D"]
collision_layer = 4
collision_mask = 19
script = ExtResource("1_l5dqu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_x1856")
sprite_frames = SubResource("SpriteFrames_x1856")
autoplay = "default"
frame_progress = 0.574083

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l5dqu")

[node name="colliders" type="Node2D" parent="."]

[node name="wallcoll" type="Area2D" parent="colliders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="colliders/wallcoll"]
shape = SubResource("RectangleShape2D_n80vc")

[node name="RGcoll" type="Area2D" parent="colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colliders/RGcoll"]
position = Vector2(8, 6)
shape = SubResource("RectangleShape2D_x1856")

[node name="LGcoll" type="Area2D" parent="colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colliders/LGcoll"]
position = Vector2(-8, 6)
shape = SubResource("RectangleShape2D_x1856")

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_b7lw1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="colliders/wallcoll" to="." method="_on_wallcoll_body_entered"]
[connection signal="body_exited" from="colliders/RGcoll" to="." method="_on_r_gcoll_body_exited"]
[connection signal="body_exited" from="colliders/LGcoll" to="." method="_on_l_gcoll_body_exited"]
